Fixed up double border bug

--- a/src/Snake.css
+++ b/src/Snake.css
@@ -13,7 +13,7 @@
 
 .GameContainer {
   background-color: azure;
-  color: black;
+  border: 10px solid black;
   width: 500px;
   height: 500px;
   margin-left: auto;
@@ -30,9 +30,9 @@
 
 .Cell {
   background-color: azure;
+  border-left: 2px solid black;
+  border-bottom: 2px solid black;
   width: 100%;  
-  height: 100%;  
-  border: 2px solid black;
 }
 
 .Footer {
